<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutorial Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="downloadData_TAG">Rizwan in DownloadData Class</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="searchButton">Search</string>
    <string name="searchView">Type your tutorial keyword (e.g Java, Culture, Health) press search: </string>
    <string name="detailsActivityTitle">Tutorial Details</string>
    <string name="details_title">Title:</string>
    <string name="details_Code">Code:</string>
    <string name="details_Level">Level:</string>
    <string name="details_Link">Link:</string>
    <string name="details_Desc">Description:</string>
    <string name="title_activity_saved_courses">SavedCourses</string>
    <string name="action_share">Share</string>
    <string name="search_title">Search</string>
    <string name="default_status">Popular Courses:</string>
    <string name="default_drawerStatus">Saved Courses:</string>
    <string name="action_delete">Delete</string>
    <string name="radio_math">Mathematics</string>
    <string name="radio_programming">Programming</string>
    <string name="radio_culture">Culture</string>
    <string name="radio_health">Health</string>
    <string name="intro_questions">Please choose one option in which topic are you most interested to obtain suggestions</string>
    <!-- SyncAdapter related -->
    <string name="sync_account_type">tutorialfinder.com.riz92</string>
    <string name="content_authority">riz92.com.tutorialfinder</string>
    <string name="pref_last_sync">last_sync</string>

</resources>
