<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFCCBC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_title"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text=""
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_Code"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text=""
            android:id="@+id/textView2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_Level"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text=""
            android:id="@+id/textView3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_Link"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text=""
            android:id="@+id/textView4"
            android:autoLink="web"
            android:textColorLink="@android:color/holo_blue_dark"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_Desc"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text=""
            android:id="@+id/textView5"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350px"
            android:id="@+id/imageView2" />

    </LinearLayout>
</ScrollView>